<resources>
    <string name="app_name">CardGame</string>
    <string name="view">Достопримечательности</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    538385457687078

    <string name="facebook_app_id"> 538385457687078</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="edypet1">Александрия</string>
    <string name="edypet2">Вращение \n плечами</string>
    <string name="edypet3">Вращение \n руками</string>
    <string name="edypet4">Наклоны \n к ногам</string>
    <string name="edypet5">Вращение \n тазом</string>
    <string name="edypet6">Вращение \n колен</string>
    <string name="aleks">Александрия была основана Александром Македонским и во времена владычества эллинов в этих местах была греческим центром Египта. Несмотря на то, что городом за его более чем 2000-летнюю историю владели самые разные государства, сохранилось довольно много памятников греческой культуры, в том числе мавзолей Александра Македонского. Когда-то здесь стоял Александрийский (Фаросский) маяк — одно из семи древних чудес света. Он разрушился в результате землетрясений, и на его руинах в 15 в. построили крепость Кайт-Бей. Сейчас в ней можно осмотреть Морской музей, трон султана и даже остатки колонн того самого маяка, а местный оперный театр утраивает концерты в саду внутри крепости. Образчиком арабской архитектуры является мечеть Абу эль-Аббаса, поражающая роскошным внутренним убранством.</string>

</resources>